fix(test): test

--- a/.eslintrc
+++ b/.eslintrc
@@ -34,6 +34,13 @@
     "quotes": [
       "error",
       "single"
+    ],
+    "no-multiple-empty-lines": [
+      "error",
+      {
+        "max": 1,
+        "maxEOF": 1
+      }
     ]
   }
 }
